Remove jsr250 and update stripe